--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,11 @@
       <div class="exercise-row">
         <div class="exercise-content">
           <!-- Votre code HTML ici -->
+          <div class="wrapper">
+            <div class="card">
+              <img src="img/Picture.png" />
+            </div>
+          </div>
         </div>
         <div class="exercise-content">
           <div class="exercise-instructions">
