--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,16 @@
           <!-- Votre code HTML ici -->
           <div class="wrapper">
             <div class="card">
-              <img src="img/Picture.png" />
+              <div class="img1">
+                <img src="img/Picture.png" />
+              </div>
+              <div class="content">
+                <div class="content-left">
+                  <div class="avatar">
+                    <p>Alex Platt</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
